<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.apnatutorials.androidimageview.MainActivity">

    <ImageView
        android:id="@+id/ivMyImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@color/colorPrimaryDark"
        android:src="@mipmap/ic_launcher"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"


            >

                <Button
                    android:id="@+id/btnFromDrawable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_image_from_drawable"
                    android:onClick="showImageDemo"
                    />
                <Button
                    android:id="@+id/btnFromSdCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_image_from_sdcard"
                    android:onClick="showImageDemo"
                    />

                <Button
                    android:id="@+id/btnFromUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_image_from_url"
                    android:onClick="showImageDemo"
                    />

                <Button
                    android:id="@+id/btnScaleType_FIT_XY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scaleType_fit_xy"
                    android:onClick="showImageDemo"

                    />
                <Button
                    android:id="@+id/btnScaleType_FIT_START"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scaleType_fit_start"
                    android:onClick="showImageDemo"
                    />
                <Button
                    android:id="@+id/btnScaleType_FIT_END"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scaleType_fit_end"
                    android:onClick="showImageDemo"
                    />
                <Button
                    android:id="@+id/btnScaleType_FIT_CENTER"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scaleType_fit_center"
                    android:onClick="showImageDemo"
                    />
            <Button
                android:id="@+id/btnScaleType_CENTER_CROP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scaleType_center_crop"
                android:onClick="showImageDemo"
                />
            <Button
                android:id="@+id/btnScaleType_CENTER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scaleType_center"
                android:onClick="showImageDemo"
                />

            <Button
                android:id="@+id/btnScaleType_CENTER_INSIDE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scaleType_center_inside"
                android:onClick="showImageDemo"
                />

            <Button
                android:id="@+id/btnScaleType_MATRIX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scaleType_matrix"
                android:onClick="showImageDemo"
                />

            <Button
                android:id="@+id/btnAnimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/animate"
                android:onClick="showImageDemo"
                />

        </LinearLayout>
        </ScrollView>
</LinearLayout>
